[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/ui/party screen/background.png" type="Texture" id=1]
[ext_resource path="res://scenes/ui/single use/librebox.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/ui/party screen/exit.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/alterebro.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/ui/text boxes/textbox.png" type="Texture" id=5]
[ext_resource path="res://scenes/ui/single use/party_screen.gd" type="Script" id=6]
[ext_resource path="res://scenes/ui/helper/optionBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/ui/helper/shadowTextLabel.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 96, 32 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 4 )

[node name="Party Screen" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Party1" parent="." instance=ExtResource( 2 )]
margin_left = 16.0
margin_top = 8.0
margin_right = 16.16
margin_bottom = 8.16
focus_neighbour_left = NodePath("../ExitButton")
focus_neighbour_top = NodePath("../ExitButton")
focus_neighbour_right = NodePath("../Party2")
focus_neighbour_bottom = NodePath("../Party3")

[node name="Party2" parent="." instance=ExtResource( 2 )]
margin_left = 248.0
margin_top = 24.0
margin_right = 248.16
margin_bottom = 24.16
focus_neighbour_left = NodePath("../Party1")
focus_neighbour_top = NodePath("../Party5")
focus_neighbour_right = NodePath("../Party3")
focus_neighbour_bottom = NodePath("../Party4")

[node name="Party3" parent="." instance=ExtResource( 2 )]
margin_left = 16.0
margin_top = 96.0
margin_right = 16.16
margin_bottom = 96.16
focus_neighbour_left = NodePath("../Party2")
focus_neighbour_top = NodePath("../Party1")
focus_neighbour_right = NodePath("../Party4")
focus_neighbour_bottom = NodePath("../Party5")

[node name="Party4" parent="." instance=ExtResource( 2 )]
margin_left = 248.0
margin_top = 112.0
margin_right = 248.16
margin_bottom = 112.16
focus_neighbour_left = NodePath("../Party3")
focus_neighbour_top = NodePath("../Party2")
focus_neighbour_right = NodePath("../Party5")
focus_neighbour_bottom = NodePath("../Party6")

[node name="Party5" parent="." instance=ExtResource( 2 )]
margin_left = 16.0
margin_top = 184.0
margin_right = 16.16
margin_bottom = 184.16
focus_neighbour_left = NodePath("../Party4")
focus_neighbour_top = NodePath("../Party3")
focus_neighbour_right = NodePath("../Party6")
focus_neighbour_bottom = NodePath("../Party2")

[node name="Party6" parent="." instance=ExtResource( 2 )]
margin_left = 248.0
margin_top = 200.0
margin_right = 248.16
margin_bottom = 200.16
focus_neighbour_left = NodePath("../Party5")
focus_neighbour_top = NodePath("../Party4")
focus_neighbour_right = NodePath("../ExitButton")
focus_neighbour_bottom = NodePath("../ExitButton")

[node name="ExitButton" type="TextureButton" parent="."]
margin_left = 320.0
margin_top = 280.0
margin_right = 416.0
margin_bottom = 312.0
focus_neighbour_left = NodePath("../Party6")
focus_neighbour_top = NodePath("../Party6")
focus_neighbour_right = NodePath("../Party1")
focus_neighbour_bottom = NodePath("../Party1")
action_mode = 0
texture_normal = SubResource( 1 )
texture_focused = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exitLabel" type="Label" parent="ExitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -3.05176e-05
margin_right = -8.0
margin_bottom = -6.00003
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 0
custom_fonts/font = SubResource( 3 )
text = "exit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prompter" type="NinePatchRect" parent="."]
margin_left = 16.0
margin_top = 264.0
margin_right = 240.0
margin_bottom = 312.0
texture = ExtResource( 5 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" parent="Prompter" instance=ExtResource( 8 )]
margin_left = 28.0
margin_top = 8.0
margin_right = 56.448
margin_bottom = 12.0
text = "Select a Libremon"

[node name="ShiftTimer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="ShiftTimerFainted" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="NormalOptions" parent="." instance=ExtResource( 7 )]
visible = false
anchor_top = 0.006
anchor_bottom = 0.006
margin_left = 316.0
margin_top = 176.08
margin_right = 468.0
margin_bottom = 310.08
choices = [ "Summary", "Switch", "Item", "Cancel" ]
font = SubResource( 4 )

[node name="BoxMover" type="Tween" parent="."]

[connection signal="pressed" from="Party1" to="." method="on_libremon_selected" binds= [ 0 ]]
[connection signal="pressed" from="Party2" to="." method="on_libremon_selected" binds= [ 1 ]]
[connection signal="pressed" from="Party3" to="." method="on_libremon_selected" binds= [ 2 ]]
[connection signal="pressed" from="Party4" to="." method="on_libremon_selected" binds= [ 3 ]]
[connection signal="pressed" from="Party5" to="." method="on_libremon_selected" binds= [ 4 ]]
[connection signal="pressed" from="Party6" to="." method="on_libremon_selected" binds= [ 5 ]]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="timeout" from="ShiftTimer" to="." method="shift_unfainted"]
[connection signal="timeout" from="ShiftTimerFainted" to="." method="shift_fainted"]
[connection signal="button_pressed" from="NormalOptions" to="." method="onNormalOptionPressed"]
[connection signal="tween_all_completed" from="BoxMover" to="." method="_on_BoxMover_tween_all_completed"]
